--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="../styles/404-page.css">
   <title>Página não encontrada</title>
 </head>
 <body>
   <main>
     <div class="container">
       <div class="text">
-        <h2>Desculpe, a página solicitada não foi encontrada</h2>
-        <button>Voltar</button>
+        <h2>Desculpe, a página solicitada não foi encontrada!</h2>
+        <a href="../../index.html">Voltar  à página inicial</a>
       </div>
       <aside>
         <img src="../../assets/img/not-found.svg" alt="ilustração de página não encontrada">
