--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/register.css">
     <link rel="shortcut icon" href="../../assets/icons/favicon.svg" type="image/x-icon">
-    <script src="../confirm-pass.js" defer></script>
+    <script src="../js/confirm-pass.js" defer></script>
+    <script src="../js/change-theme.js" defer></script>
     <title>Cadastre-se</title>
 </head>
-<body>
+<body class="light">
     <div class="back">
         <a href="../../index.html">
             <img src="../../assets/icons/arrow-left.svg">
