🚧 still working on dark-mode in register page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="back-text" style="font-weight: 510">Voltar</span>
         </a>
     </div>
-    <main class="main">
+    <main>
         <div class="light-container">
             <div class="info">
                 <a href="index.html"><img src="assets/icons/logo.svg" alt="logomarca" class= "logo"></a>
@@ -30,7 +30,7 @@
                 <p>Não possui conta? <a href="src/pages/register.html" class="link">Criar conta</a></p>
             </div>
             <aside>
-                <button class="theme-toggle"><img class="toggle-img" src="../../assets/icons/moon.svg" alt=""></button>
+                <button class="theme-toggle"><img class="toggle-img" src="assets/icons/moon.svg" alt=""></button>
                 <img class="light-aside-img" src="assets/img/aside-login-img.svg" alt="imagem ilustrativa">
             </aside>
         </div>
