--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -19,20 +19,22 @@
         </a>
     </div>
     <main class="main">
-        <div class="container-register">
+        <div class="light-container">
             <div class="info">
-                <a href="index.html"><img src="../../assets/icons/logo.svg" alt="logomarca" class="logo"></a>
+                <a href="index.html"><img src="../../assets/icons/logo.svg" alt="logomarcar" class="logo"></a>
                 <form action="register.html" method="post">
-                    <input type="email" name="email" class="input-field" placeholder="Email" required>
+                    <input type="email" name="email" class="light-input-field" placeholder="Email" required>
                     <span class="check-message"></span>
-                    <input type="password" name="senha" class="input-field" id="password" placeholder="Senha" onkeyup="validate()">
-                    <input type="password" name="senha" class="input-field" id="confirm-password" placeholder="Confirme a senha" onkeyup="validate()">
+                    <input type="password" name="senha" class="light-input-field" id="password" placeholder="Senha" onkeyup="validate()">
+                    <input type="password" name="senha" class="light-input-field" id="confirm-password" placeholder="Confirme a senha" onkeyup="validate()">
                 </form>
-                <button type="submit" class="sub-button">Cadastrar-se</button>
+                <button type="submit" class="light-sub-button">Cadastrar-se</button>
                 <p>Já possui conta? <a href="../../index.html" class="link">Ir para Login</a></p>
             </div>
             <aside>
+                <button class="theme-toggle"><img class="toggle-img" src="../../assets/icons/moon.svg" alt=""></button>
                 <img class="aside-img" src="../../assets/img/aside-register-img.svg" alt="imagem ilustrativa">
+                
             </aside>
         </div>
     </main>
